$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.79 2005/02/16 15:24:21 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------


A note about Exim versions 4.44 and 4.50
----------------------------------------

Exim 4.50 was meant to be the next release after 4.43. It contains a lot of
changes of various kinds. As a consequence, a big documentation update was
needed. This delayed the release for rather longer than seemed good, especially
in the light of a couple of (minor) security issues. Therefore, the changes
that fixed bugs were backported into 4.43, to create a 4.44 maintenance
release. So 4.44 and 4.50 are in effect two different branches that both start
from 4.43.

I have left the 4.50 change log unchanged; it contains all the changes since
4.43. The change log for 4.44 is below; many of its items are identical to
those for 4.50. This seems to be the most sensible way to preserve the
historical information.


Exim version 4.50
-----------------

 1. Minor wording change to the doc/README.SIEVE file.

 2. Change 4.43/35 introduced a bug: if quota_filecount was set, the
    computation of the current number of files was incorrect.

 3. Closing a stable door: arrange to panic-die if setitimer() ever fails. The
    bug fixed in 4.43/37 would have been diagnosed quickly if this had been in
    place.

 4. Give more explanation in the error message when the command for a transport
    filter fails to execute.

 5. There are several places where Exim runs a non-Exim command in a
    subprocess. The SIGUSR1 signal should be disabled for these processes. This
    was being done only for the command run by the queryprogram router. It is
    now done for all such subprocesses. The other cases are: ${run, transport
    filters, and the commands run by the lmtp and pipe transports.

 6. Added CONFIGURE_GROUP build-time option.

 7. Some older OS have a limit of 256 on the maximum number of file